java/istio/infra/step-2/canary/4-stickiness/order-service-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-service-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - service-mesh-demo-istio-ingress-gateway
  http:
    - match:
        - headers:
            cookie:
              regex: "^(.*?;)?(version=canary-v2)(;.*)?$"
      route:
        - destination:
            host: order-service
            subset: v2
            port:
              number: 8080
    - route:
        - destination:
            host: order-service
            subset: v1
            port:
              number: 8080
          weight: 80
        - destination:
            host: order-service
            subset: v2
            port:
              number: 8080
          weight: 20
